[gd_scene load_steps=6 format=2]

[ext_resource path="res://sprites/Life/VidaInicial.png" type="Texture" id=1]
[ext_resource path="res://sprites/Life/Vida75.png" type="Texture" id=2]
[ext_resource path="res://sprites/Life/VidaFinal.png" type="Texture" id=3]
[ext_resource path="res://sprites/Life/VidaMeio.png" type="Texture" id=4]
[ext_resource path="res://scripts/Life.gd" type="Script" id=5]

[node name="Life" type="Node2D"]
script = ExtResource( 5 )

[node name="VidaFinal" type="Sprite" parent="."]
position = Vector2( 47.3293, 49.845 )
scale = Vector2( 2, 2 )
texture = ExtResource( 3 )

[node name="Vida75" type="Sprite" parent="."]
position = Vector2( 193.113, 49.8445 )
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )

[node name="VidaMeio" type="Sprite" parent="."]
position = Vector2( 119.272, 49.845 )
scale = Vector2( 2, 2 )
texture = ExtResource( 4 )

[node name="VidaInicial" type="Sprite" parent="."]
position = Vector2( 263.943, 49.8445 )
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )
